Multiple Bug fixes (#1275)
* MM-10752 - Fixing margin between switcher button

* MM-10750 - Fixing tooltip max width issue

* MM-10701 - Updating search spacing on mobile

* MM-10676 - Fixing vertical margins around images

* MM-10572 - Fixing about modal overlapping issue

--- a/sass/components/_files.scss
+++ b/sass/components/_files.scss
@@ -151,7 +151,7 @@
         .image-name {
             display: inline-block;
             font-size: 14px;
-            font-weight: bold; 
+            font-weight: bold;
         }
 
         .image-container {
@@ -179,6 +179,7 @@
             left: 0;
             max-height: 350px;
             max-width: 100%;
+            display: block;
             opacity: 0;
             overflow: hidden;
             position: absolute;
