--- a/sass/responsive/_tablet.scss
+++ b/sass/responsive/_tablet.scss
@@ -130,7 +130,7 @@
         .search-bar__container {
             .search__form {
                 &.focused {
-                    width: 313px;
+                    width: 300px;
                 }
             }
         }
